[package]
name = "tinkoff_invest_api"
version = "0.3.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.13.2"
prost-types = "0.13.2"
uuid = { version = "1.10.0", features = ["v4"] }
tonic = { version = "0.12.2", features = ["tls", "tls-native-roots", "gzip"] }

[dev-dependencies]
async-stream = "0.3.5"
futures = { version = "0.3.30", default-features = false, features = ["alloc"] }
tokio = { version = "1.40.0", features = [
    "rt-multi-thread",
    "time",
    "fs",
    "macros",
    "net",
] }
tokio-stream = { version = "0.1.16", features = ["net"] }
futures-util = { version = "0.3.30" }
