[package]
name = "tinkoff_invest_api"
version = "0.3.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.4"
prost-types = "0.12.4"
uuid = { version = "1.10.0", features = ["v4"] }
tonic = { version = "0.11.0", features = ["tls", "tls-roots", "gzip"] }

[dev-dependencies]
async-stream = "0.3.5"
futures = { version = "0.3.30", default-features = false, features = ["alloc"] }
tokio = { version = "1.40.0", features = [
    "rt-multi-thread",
    "time",
    "fs",
    "macros",
    "net",
] }
tokio-stream = { version = "0.1.16", features = ["net"] }
futures-util = { version = "0.3.30" }
