[package]
name = "tinkoff_invest_api"
version = "0.3.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.6"
prost-types = "0.12.6"
uuid = { version = "1.10.0", features = ["v4"] }
tonic = { version = "0.11.0", features = ["tls", "tls-roots", "gzip"] }

[dev-dependencies]
async-stream = "0.3.6"
futures = { version = "0.3.31", default-features = false, features = ["alloc"] }
tokio = { version = "1.42.0", features = [
    "rt-multi-thread",
    "time",
    "fs",
    "macros",
    "net",
] }
tokio-stream = { version = "0.1.17", features = ["net"] }
futures-util = { version = "0.3.31" }
